<resources>
    <string name="app_name">Pizzeria</string>
    <string name="strTitulo">Pizzeria Jerez</string>
    <string name="strEligirPizza">Elegir Pizza</string>
    <string name="strConfigurar">Configurar</string>
    <string name="strSalir">Salir</string>
    <string name="strConfigurar2">Esta es la activity de configuracion</string>
    <string name="strElegirTipoPizza">Elige el tipo de pizza que deseas</string>
    <string name="strPersonalizada">Pizza personalizada</string>
    <string name="strCreaTuPizza">Creala Tu Mismo!</string>
    <string name="strRepetirPedido">Repetir el ultimo pedido</string>
    <string name="strNuestrasPizzas">Nuestras Pizzas</string>
    <string name="strVacio" />
    <string name="strEligeTamaño">Elige el tamaño de tu pizza</string>
    <string name="strPizzaPequeña">Pequeña (4.50)</string>
    <string name="strPizzaMediana">Mediana (6.50)</string>
    <string name="strPequena">Pequeña (4.50)</string>
    <string name="strMediana">Mediana (6.50)</string>
    <string name="strGrande">Grande (9.50)</string>
    <string name="strFamiliar">Familiar (12.00)</string>
    <string name="strSeleccionarTamano">Confirmar tamaño</string>
    <string name="strIniciarSesion">Iniciar Sesion</string>
    <string name="strCarrito">Carrito</string>
    <string name="strConfirmarPedido">Confirmar Pedido</string>
    <string name="strPagar">Pagar</string>
    <string name="strRojo">Rojo</string>
    <string name="strVerde">Verde</string>>
    <string name="strAzul">Azul</string>
    <string name="strPrecio0">Precio Total: 0.00 €</string>
    <string name="strIngredientes">Ingredientes</string>
    <string name="strCrearPizza">Crear Pizza</string>
    <string name="strBlanco">Blanco</string>
</resources>